Solved height stretching div issue, work on adding LR margins to side and not letting it LR scroll

--- a/web/static/fonts.css
+++ b/web/static/fonts.css
@@ -32,7 +32,7 @@
 }
 
 .pop-eyellow {
-  text-shadow: 2px 2px 1px #ffdf6c;
+  text-shadow: 3px 3px 2px #ffdf6c;
 }
 
 .faint-cool-white {
